# SfMLocalization

./: CMakeLists.txt  LICENSE  README.md
BoWCommon/: .cproject  .project
BoWCommon/src/: BoFSpatialPyramids.cpp  BoFSpatialPyramids.h  BoFUtils.cpp  BoFUtils.h  BowDenseFeatureSettings.h  DenseFeatureDetector.cpp  DenseFeatureDetector.h  DenseLocalFeatureWrapper.cpp  DenseLocalFeatureWrapper.h
ExtFeatAndMatch/: .cproject  .project
ExtFeatAndMatch/src/: computeFeaturesAndMatches.cpp
OpenMVGLocalization_AKAZE/: .cproject  .project
OpenMVGLocalization_AKAZE/src/: localization.cpp
OpenMVGLocalization_AKAZE_BeaconMatch/: .cproject  .project
OpenMVGLocalization_AKAZE_BeaconMatch/src/: localization.cpp
OpenMVG_BA/: .cproject  .project
OpenMVG_BA/src/: adjust_sfm_data.cpp
PyCalibration/: .project
PyCalibration/src/: calibrate.py
PyEvaluateAccuracy/: .project
PyEvaluateAccuracy/src/: addSfmEstimateToBeaconData.py  localizeGlobalCoordinate.py  localizeGlobalCoordinateRefPoint.py  localizeRelativeCoordinate.py  measureAccuracy.py
PyReconstruct/: .project
PyReconstruct/src/: reconstructGraph.py
PyReconstructIBeacon/: .project
PyReconstructIBeacon/src/: reconstructGraphIBeacon.py
PyReconstructUtils/: .project
PyReconstructUtils/data/: edge-info.csv  list-coordinate.csv  projects-nsh-4f-qolt.csv
PyReconstructUtils/src/: changeRootPathInOutputJson.py  convertEdgeCoordinate.py  convertNumpyMatTxt2OpenCvMatYml.py  mergeSfmModelsWithTransform.py  sfmCoordinateEditor.py  transformPlyToGlobalCoordinate.py
PyViewMatch/: .project
PyViewMatch/src/: viewMatchPyCV.py
PyVisionLocalizeBeaconCommon/: .project
PyVisionLocalizeBeaconCommon/src/hulo_ibeacon/: IBeaconUtils.py  LocalizeIBeaconParam.py  ReconstructIBeaconParam.py  __init__.py  sfmMergeGraphIBeacon.py
PyVisionLocalizeCommon/: .project
PyVisionLocalizeCommon/src/hulo_bow/: BOWUtils.py  LocalizeBOWParam.py  ReconstructBOWParam.py  sfmMergeGraphBOW.py
PyVisionLocalizeCommon/src/hulo_file/: FileUtils.py  PlyUtils.py  SfmDataUtils.py
PyVisionLocalizeCommon/src/hulo_param/: LocalizeParam.py  ReconstructParam.py
PyVisionLocalizeCommon/src/hulo_sfm/: cleanSfM.py  mergeSfM.py  sfmMergeGraph.py
PyVisionLocalizeCommon/src/hulo_transform/: ransacTransform.py  transformations.py
PyVisionLocalizeCommonTest/: .project
PyVisionLocalizeCommonTest/src/: FileUtilsTest.py  PlyUtilsTest.py  SfmDataUtilsTest.py
ReadBinaryMat/: .cproject  .project
ReadBinaryMat/src/: ReadBinaryMat.cpp
TrainBoW/: .cproject  .project
TrainBoW/src/: TrainBoW.cpp
VisionLocalizeBeaconCommon/: .cproject  .project
VisionLocalizeBeaconCommon/src/: BeaconUtils.cpp  BeaconUtils.h
VisionLocalizeCommon/: .cproject  .project
VisionLocalizeCommon/src/: AKAZEOpenCV.cpp  AKAZEOpenCV.h  AKAZEOption.cpp  AKAZEOption.h  FileUtils.cpp  FileUtils.h  HuloSfMRegionsProvider.h  MatUtils.cpp  MatUtils.h  MatchUtils.cpp  MatchUtils.h  PcaWrapper.cpp  PcaWrapper.h  SfMDataUtils.cpp  SfMDataUtils.h  StringUtils.cpp  StringUtils.h
VisionLocalizeServer/: .project  app.js  binding.gyp  package.json
VisionLocalizeServer/config/: map.json  user.json
VisionLocalizeServer/config/camera/iphone6-1920x1080/: K.txt  K.yml  dist.txt  dist.yml
VisionLocalizeServer/config/camera/iphone6-1920x1080-shrink-0.75/: K.txt  K.yml  dist.txt  dist.yml
VisionLocalizeServer/lib/: share.js
VisionLocalizeServer/public/stylesheets/: style.css
VisionLocalizeServer/routes/: index.js  localize.js  map.js  user.js
VisionLocalizeServer/src/: LocalizeEngine.cc  LocalizeEngine.h  localizeImage.cc
VisionLocalizeServer/views/: index.jade  layout.jade
Visualize3D/: .classpath  .project
Visualize3D/WebContent/: vis.html  visOffline.html  visOfflineRelative.html  visOnline.html
Visualize3D/WebContent/WEB-INF/: web.xml
